# wolfie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: tiledefs.cfg
source/: editor.c  main.cpp  main_sdl2.c  palette_wolf3d.h  wad.c  wad.h  wolfie.c  wolfie.h  wolfie_icon_rgba.h
source/c/: main.c
source/old/: main_sdl2.c  wolfie.c
